@@ -1,3 +1,8 @@
+2009-04-11  Daniel Franke  <franke.daniel@gmail.com>
+
+	* gfortran.dg/whole_file_5.f90: New.
+	* gfortran.dg/whole_file_6.f90: New.
+
 2009-04-11  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/39713
